# ndiReceiver

./: .gitignore  CMakeLists.txt  main.cpp
include/: ArtnetManager.h  ChannelManager.h  DeviceDefines.h  Dimmer.h  PixelInMatrix.h  PixelMatrix.h  TimingCalculator.h  ndiReceiverWrapper.h
src/: ArtnetManager.cpp  ChannelManager.cpp  Dimmer.cpp  PixelInMatrix.cpp  PixelMatrix.cpp  TimingCalculator.cpp  ndiReceiverWrapper.cpp
